--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@
   width: 100%;
   height: auto;
   background-color: #fff;
+  box-shadow: 0px 14px 28px rgba(0,0,0,.15),
+              0px 14px 28px rgba(0,0,0,.16);
 }
 .nav-title {
   font-family: sans-serif;
@@ -93,6 +95,7 @@
   font-weight: 500;
   position: relative;
   top: 155px;
+  right: 50px;
 }
 
 .hero-container .icon-box {
@@ -153,14 +156,57 @@
   color: #fff;
 }
 
-.reveal{
-  position: relative;
-  transform: translateY(150px);
-  opacity: 0;
-  transition: all 2s ease;
+.about-header{
+  margin-top: 100px;
 }
 
-.reveal.active{
-  transform: translateY(0px);
-  opacity: 1;
+.team-about-bg{
+  width: 100%;
+  height: 40rem;
+  margin-top: 30px;
+}
+
+.about-title h6,.about-title1,p{
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  color: #111;
+}
+
+.about-title1{
+  font-size: 30px;
+  font-weight: bold;
+  font-weight: 700;
+}
+
+.about-title-p1{
+  font-size: 20px;
+  color: #111;
+  font-weight: 500;
+}
+
+.about-logo i{
+  font-size: 25px;
+  color: #009ffd;
+  box-shadow: 0px 14px 28px rgba(0,0,0,.15),
+  0px 14px 28px rgba(0,0,0,.16);
+  border-radius: 10px;
+}
+
+.h6{
+  position: relative;
+  left: 30px;
+  bottom: 29px;
+  font-size: 20px;
+  font-weight: 600;
+
+}
+
+.p0{
+  margin-top: 50px;
+  margin-bottom: 30px;
+  font-size: 25px;
+  font-weight: 700;
+  font-style: initial;
 }
